--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<style>
-			button {
-				height: 30px;
-				width: 30px;
-				outline: none;
-			}
-		</style>
-		<script type="text/javascript" src="script.js"></script>
-	
-	</head>
-	<body>
-		<h1>로드 완료</h1>
-	</body>
+<!doctype html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>KHU Sugang Master</title>
+	<script src="exploit.js"></script>
+</head>
+<body>
+	<div class="container">
+		<p>로드 완료</p>
+	</div>
+</body>
 </html>
